--- a/style.css
+++ b/style.css
@@ -3,5 +3,6 @@ body, html {
     height: 100%;
     margin: 0;
     padding: 0;
-    /* scroll-behavior: smooth; */
+    scroll-behavior: smooth;
+    overflow: hidden;
 }
